--- a/style.css
+++ b/style.css
@@ -35,8 +35,6 @@ nav {
 }
 
 nav a{
-   
-    
     padding:5px;
     text-decoration: none;
     color:#19068F;
@@ -52,4 +50,15 @@ nav a:hover{
 .text {
     color: white;
     text-decoration: none;
+}
+.userBoard{
+    border-radius: 10px;
+    border-color: #6ce4e4;
+    margin: 10px;
+    padding: 5px;
+}
+.allMessages{
+    border-radius:10px;
+    border-color: #6ce4e4
+
 }
