--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+ @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 body{
     background-color: #19068F;
     color:white;
+    font-family: 'Nunito', sans-serif;;
 
 }
 
@@ -10,7 +12,7 @@ h1{
 }
 
 .text{
-    font-family: Tahoma, sans-serif;
+    font-family: 'Nunito', sans-serif;
     padding: 30px;
     font-size: 40px;
     text-align: left;
@@ -31,6 +33,7 @@ nav {
     justify-content: space-around; 
     background-color: white;
     border-radius: 10px;
+    font-size: 30px;
     
 }
 
@@ -59,6 +62,23 @@ nav a:hover{
 }
 .allMessages{
     border-radius:10px;
-    border-color: #6ce4e4
+    border-color: #6ce4e4;
+    flex: 1;
+    margin-top: 15px;
+    width: calc(60% + var(--addedPadding)*2);
+    padding: var(--addedPadding);
+    border: 2px solid var(--accent);
+    background-color: var(--primaryLight);
+    color: var(--alternate);
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+    box-sizing: border-box;
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-gap: 5px;
 
+}
+
+.singleInput{
+    font-family: 'Nunito', sans-serif;
 }
