--- a/style.css
+++ b/style.css
@@ -37,11 +37,18 @@ nav {
     
 }
 
+nav{
+    border:solid;
+    border-width: 10px;
+    border-color: teal;
+}
+
 nav a{
-    padding:5px;
+    padding: 5px;
     text-decoration: none;
     color:#19068F;
 }
+
 nav a:hover{
     color:#19068F;
     background-color: white;
@@ -61,6 +68,7 @@ nav a:hover{
     padding: 5px;
 }
 .allMessages{
+    border:solid;
     border-radius:10px;
     border-color: #6ce4e4;
     flex: 1;
@@ -81,4 +89,52 @@ nav a:hover{
 
 .singleInput{
     font-family: 'Nunito', sans-serif;
+    border-radius: 10px;
+    border:5px;
+    display:flex;
+    font-size: 50px;
+}
+form, .inputContainer, .singleInput {
+    display: grid;
+    grid-gap: var(--addedPadding);
+}
+
+.entry{
+    text-align: center;
+    border:solid;
+    border-color: white;
+    background-color: teal;
+    border-radius: 10px;
+    margin:10px;
+    border:5px;
+    font-size: 30px;
+    align-items: center;
+    font-family: 'Nunito', sans-serif;
+
+}
+
+#submitButton{
+    font-size: 30px;
+    border: solid;
+    border-color: white;
+    border-width: 10px;
+    margin:10px;
+    background-color: white;
+    font-family: 'Nunito', 'san-serif';
+    color: black;
+}
+
+.imagess{
+    display: flex;
+    margin: 10px;
+    border-color: white;
+    border-width: 10px;
+    border:solid;
+    width:1000px;
+    height: 500px;
+}
+
+#username, #message, #time{
+    padding: 10px;
+    text-align: center;
 }
